# aos-kernel

./: README.md  azure.yaml  pyproject.toml
docs/: CODE_ORGANIZATION.md  (+16 more)
docs/agent-repositories/aos-deployment/: README.md  pyproject.toml
docs/agent-repositories/aos-deployment/.github/agents/: infrastructure-deploy.agent.md
docs/agent-repositories/aos-deployment/.github/instructions/: deployment.instructions.md
docs/agent-repositories/aos-deployment/.github/prompts/: deployment-expert.md
docs/agent-repositories/aos-deployment/.github/skills/azure-troubleshooting/: README.md  SKILL.md
docs/agent-repositories/aos-deployment/.github/skills/deployment-error-fixer/: IMPLEMENTATION_SUMMARY.md  README.md  SKILL.md  demo.sh
docs/agent-repositories/aos-deployment/.github/skills/deployment-error-fixer/scripts/: fix_error.py
docs/agent-repositories/aos-deployment/.github/skills/deployment-error-fixer/tests/: test_error_fixer.py
docs/agent-repositories/aos-deployment/.github/workflows/: infrastructure-deploy.yml  infrastructure-monitoring.yml  infrastructure-troubleshooting.yml
docs/agent-repositories/aos-deployment/deployment/: ORCHESTRATOR_USER_GUIDE.md  QUICKSTART.md  README.md  REGIONAL_REQUIREMENTS.md  deploy.py  main-modular.bicep
docs/agent-repositories/aos-deployment/deployment/docs/: README.md
docs/agent-repositories/aos-deployment/deployment/examples/: README.md
docs/agent-repositories/aos-deployment/deployment/modules/: README.md
docs/agent-repositories/aos-deployment/deployment/orchestrator/: README.md
docs/agent-repositories/aos-deployment/deployment/parameters/: README.md
docs/agent-repositories/aos-deployment/deployment/tests/: README.md
docs/agent-repositories/aos-deployment/docs/: DEPLOYMENT_PLAN.md  DEPLOYMENT_TASKS.md  api-reference.md  architecture.md  contributing.md  deployment.md
docs/agent-repositories/aos-function-app/: README.md  pyproject.toml
docs/agent-repositories/aos-function-app/.github/instructions/: azure-functions.instructions.md
docs/agent-repositories/aos-function-app/.github/prompts/: azure-expert.md
docs/agent-repositories/aos-function-app/.github/skills/azure-functions/: SKILL.md
docs/agent-repositories/aos-function-app/.github/workflows/: ci.yml
docs/agent-repositories/aos-function-app/docs/: api-reference.md  architecture.md  contributing.md
docs/agent-repositories/aos-function-app/src/: function_app.py  host.json
docs/agent-repositories/aos-function-app/tests/: __init__.py  test_function_app.py
docs/agent-repositories/aos-intelligence/: README.md  pyproject.toml
docs/agent-repositories/aos-intelligence/.github/instructions/: aos-intelligence.instructions.md
docs/agent-repositories/aos-intelligence/.github/prompts/: intelligence-expert.md
docs/agent-repositories/aos-intelligence/.github/skills/aos-intelligence/: SKILL.md
docs/agent-repositories/aos-intelligence/.github/workflows/: ci.yml
docs/agent-repositories/aos-intelligence/docs/: api-reference.md  architecture.md  contributing.md
docs/agent-repositories/aos-intelligence/examples/: ml_pipeline_example.py  rag_example.py  self_learning_example.py
docs/agent-repositories/aos-intelligence/src/aos_intelligence/: __init__.py  config.py
docs/agent-repositories/aos-intelligence/src/aos_intelligence/knowledge/: __init__.py  evidence.py  indexing.py  precedent.py
docs/agent-repositories/aos-intelligence/src/aos_intelligence/learning/: __init__.py  domain_expert.py  interaction_learner.py  knowledge_manager.py  learning_pipeline.py  rag_engine.py  self_learning_agents.py  self_learning_mixin.py
docs/agent-repositories/aos-intelligence/src/aos_intelligence/ml/: __init__.py  dpo_trainer.py  foundry_agent_service.py  lorax_server.py  pipeline.py  pipeline_ops.py  self_learning_system.py
docs/agent-repositories/aos-intelligence/tests/: conftest.py  test_dpo_trainer.py  test_knowledge.py  test_learning.py  test_lorax.py  test_ml_pipeline.py
docs/agent-repositories/aos-kernel/: README.md  pyproject.toml
docs/agent-repositories/aos-kernel/.github/instructions/: architecture.instructions.md  code-quality.instructions.md
docs/agent-repositories/aos-kernel/.github/prompts/: python-expert.md
docs/agent-repositories/aos-kernel/.github/skills/code-quality-pylint/: SKILL.md
docs/agent-repositories/aos-kernel/.github/skills/code-refactoring/: SKILL.md
docs/agent-repositories/aos-kernel/.github/spec/: skills.md
docs/agent-repositories/aos-kernel/docs/: api-reference.md  architecture.md  contributing.md
docs/agent-repositories/aos-kernel/docs/overview/: README.md
docs/agent-repositories/aos-kernel/docs/releases/: README.md
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/: __init__.py  agent_operating_system.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/agents/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/apps/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/config/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/environment/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/executor/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/governance/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/mcp/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/messaging/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/monitoring/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/observability/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/orchestration/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/platform/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/services/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/shared/: __init__.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/storage/: __init__.py
docs/agent-repositories/aos-kernel/tests/: conftest.py
(+244 files in other folders)
