[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aos-intelligence"
version = "1.0.0"
description = "AOS Intelligence — ML pipelines, LoRA/LoRAx, DPO training, self-learning, knowledge management, and RAG for the Agent Operating System."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "ASISaga", email = "opensource@asisaga.com" }]
keywords = ["agent", "ai", "ml", "lora", "lorax", "dpo", "rag", "self-learning", "knowledge", "aisaga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.50.0",
    "torch>=2.6.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "trl>=0.16.0",
    "peft>=0.15.0",
    "accelerate>=1.5.0",
    "datasets>=3.5.0",
    "mlflow>=3.5.0",
]
rag = [
    "chromadb>=0.6.0",
]
foundry = [
    "azure-ai-agents>=1.1.0",
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.25.0",
]
full = [
    "aos-intelligence[ml]",
    "aos-intelligence[rag]",
    "aos-intelligence[foundry]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-intelligence"
Documentation = "https://github.com/ASISaga/aos-intelligence/tree/main/docs"
Repository = "https://github.com/ASISaga/aos-intelligence"
Issues = "https://github.com/ASISaga/aos-intelligence/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aos_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
