[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aos-kernel"
version = "3.0.0"
description = "Agent Operating System Kernel — orchestration, messaging, storage, auth, and system services"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "ASISaga", email = "opensource@asisaga.com" }]
keywords = ["agent", "ai", "kernel", "orchestration", "messaging", "storage", "mcp", "aisaga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"

dependencies = [
    "purpose-driven-agent>=1.0.0",
    "leadership-agent>=1.0.0",
    "cmo-agent>=1.0.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.12.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "psutil>=7.0.0",
    "PyJWT>=2.10.0",
    "cryptography>=45.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "agent-framework>=1.0.0rc1",
    "agent-framework-orchestrations>=1.0.0b260219",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.25.0",
    "azure-storage-blob>=12.25.0",
    "azure-storage-queue>=12.13.0",
    "azure-data-tables>=12.7.0",
    "azure-servicebus>=7.14.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-ai-agents>=1.1.0",
    "azure-ai-projects>=1.0.0",
    "agent-framework-azure-ai>=1.0.0rc1",
]
full = [
    "aos-kernel[azure]",
    "aos-intelligence>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-kernel"
Documentation = "https://github.com/ASISaga/aos-kernel/tree/main/docs"
Repository = "https://github.com/ASISaga/aos-kernel"
Issues = "https://github.com/ASISaga/aos-kernel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
